// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testCoreChartComponent 1`] = `
<svg
  class="core"
>
  <g
    transform="translate(1,1)"
  >
    <rect
      class="core-border"
      fill="none"
      height="278"
      rx="2"
      ry="2"
      width="128"
    />
    <text
      class="core-name"
      dominant-baseline="middle"
      text-anchor="middle"
      x="65"
      y="20"
    >
      Core15
    </text>
    <g
      transform="translate(20,35)"
      width="90"
    >
      <g
        class="subCore"
        transform="translate(0,0)"
      >
        <g>
          <rect
            fill="#A7CE52"
            height="33"
            rx="2"
            ry="0"
            width="90"
            x="0"
            y="0"
          />
          <text
            dominant-baseline="middle"
            text-anchor="middle"
            x="45"
            y="16.5"
          >
            Cube0
          </text>
        </g>
        <g>
          <rect
            fill="#A7CE52"
            height="33"
            rx="2"
            ry="0"
            width="90"
            x="0"
            y="33"
          />
          <text
            dominant-baseline="middle"
            text-anchor="middle"
            x="45"
            y="49.5"
          >
            38
          </text>
        </g>
      </g>
      <g
        class="subCore"
        transform="translate(0,81)"
      >
        <g>
          <rect
            fill="#EF5353"
            height="33"
            rx="2"
            ry="0"
            width="90"
            x="0"
            y="0"
          />
          <text
            dominant-baseline="middle"
            text-anchor="middle"
            x="45"
            y="16.5"
          >
            Vector0
          </text>
        </g>
        <g>
          <rect
            fill="#EF5353"
            height="33"
            rx="2"
            ry="0"
            width="90"
            x="0"
            y="33"
          />
          <text
            dominant-baseline="middle"
            text-anchor="middle"
            x="45"
            y="49.5"
          >
            63
          </text>
        </g>
      </g>
      <g
        class="subCore"
        transform="translate(0,162)"
      >
        <g>
          <rect
            height="33"
            rx="2"
            ry="0"
            width="90"
            x="0"
            y="0"
          />
          <text
            dominant-baseline="middle"
            text-anchor="middle"
            x="45"
            y="16.5"
          >
            Vector1
          </text>
        </g>
        <g>
          <rect
            height="33"
            rx="2"
            ry="0"
            width="90"
            x="0"
            y="33"
          />
          <text
            dominant-baseline="middle"
            text-anchor="middle"
            x="45"
            y="49.5"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`testCoreChartComponent 2`] = `
<svg
  class="core"
>
  <g
    transform="translate(1,1)"
  >
    <rect
      class="core-border"
      fill="none"
      height="278"
      rx="2"
      ry="2"
      width="128"
    />
    <text
      class="core-name"
      dominant-baseline="middle"
      text-anchor="middle"
      x="65"
      y="20"
    >
      Core19
    </text>
    <g
      transform="translate(20,35)"
      width="90"
    >
      <g
        class="subCore"
        transform="translate(0,0)"
      >
        <g>
          <rect
            height="33"
            rx="2"
            ry="0"
            width="90"
            x="0"
            y="0"
          />
          <text
            dominant-baseline="middle"
            text-anchor="middle"
            x="45"
            y="16.5"
          >
            Cube0
          </text>
        </g>
        <g>
          <rect
            height="33"
            rx="2"
            ry="0"
            width="90"
            x="0"
            y="33"
          />
          <text
            dominant-baseline="middle"
            text-anchor="middle"
            x="45"
            y="49.5"
          />
        </g>
      </g>
      <g
        class="subCore"
        transform="translate(0,81)"
      >
        <g>
          <rect
            height="33"
            rx="2"
            ry="0"
            width="90"
            x="0"
            y="0"
          />
          <text
            dominant-baseline="middle"
            text-anchor="middle"
            x="45"
            y="16.5"
          >
            Vector0
          </text>
        </g>
        <g>
          <rect
            height="33"
            rx="2"
            ry="0"
            width="90"
            x="0"
            y="33"
          />
          <text
            dominant-baseline="middle"
            text-anchor="middle"
            x="45"
            y="49.5"
          />
        </g>
      </g>
      <g
        class="subCore"
        transform="translate(0,162)"
      >
        <g>
          <rect
            height="33"
            rx="2"
            ry="0"
            width="90"
            x="0"
            y="0"
          />
          <text
            dominant-baseline="middle"
            text-anchor="middle"
            x="45"
            y="16.5"
          >
            Vector1
          </text>
        </g>
        <g>
          <rect
            height="33"
            rx="2"
            ry="0"
            width="90"
            x="0"
            y="33"
          />
          <text
            dominant-baseline="middle"
            text-anchor="middle"
            x="45"
            y="49.5"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;
